@@ -17,6 +17,7 @@ INCOMPATIBLE CHANGES
   TEZ-2468. Change the minimum Java version to Java 7.
 
 ALL CHANGES:
+  TEZ-2748. Fix master build against hadoop-2.2. 
   TEZ-2743. Fix TezContainerLauncher logging tokens.
   TEZ-2708. Rename classes and variables post TEZ-2003 changes.
   TEZ-2740. Create a reconfigureVertex alias for deprecated
